# symphony-runtime

./: .gitmodules  Cargo.toml  build.rs  channel.rs
include/symphony/: tcp_channel.h
scripts/: provision-focal64.sh
src/: api.rs  bitvec.rs  channel.rs  gmw.rs  lib.rs  motion.rs  party.rs  sec.rs  util.rs  yao.rs
src/gmw/: boolean.rs  eval.rs  integer.rs  natural.rs
src/symphony-runtime/: API.hpp  Bit.hpp  Boolean.hpp  Channel.hpp  GMW.cpp  GMW.hpp  PRG.hpp  Protocol.cpp  Replicated.cpp  Replicated.hpp  U64.hpp
src/symphony-runtime/Backends/: MpSpdz.hpp
src/symphony-runtime/Traits/: Comm.hpp  Group.hpp  Random.hpp  SecIO.hpp  Share.hpp
src/symphony-runtime/Util/: BitVector.hpp  Channel.hpp  LocalChannel.hpp  PRG.hpp
src/symphony-runtime/src/: Bit.hpp  Boolean.hpp  BooleanGroup.cpp  Channel.hpp  GMW.cpp  GMW.hpp  Modular.hpp  Protocol.cpp  Replicated.cpp  Sharing.hpp  TCPChannel.cpp  TCPChannel.hpp  TraitTest.cpp  TraitTest.hpp
src/symphony-runtime/src/Sharing/: Context.cpp  Context.hpp
src/test/: TestBoolean.cpp  TestGMW.cpp
src/util/: .#configurable.rs  bitvec.rs  channel.rs  prg.rs
