[package]
name = "symphony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scuttlebutt = { path = "extern/swanky/scuttlebutt" }
rand = "0.7"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
bitvec = { version = "1.0.0", features = ["serde"] }