[package]
name = "symphony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scuttlebutt = { path = "extern/swanky/scuttlebutt" }
rand = "0.7"
anyhow = "1.0.56"
bitvec = "1.0.0"
integer-encoding = "3.0.3"