[package]
name = "symphony"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
rpath = true

[dependencies]
scuttlebutt = { path = "extern/swanky/scuttlebutt" }
rand = "0.7"
anyhow = "1.0.56"
bitvec = "1.0.0"
integer-encoding = "3.0.3"
once_cell = "1.10.0"
libc = "0.2.124"